Add DynamoDB dependency

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,5 @@ junitVersion=4.12
 cucumberVersion=4.2.3
 restAssuredVersion=3.3.0
 springfoxVersion=2.9.2
+dynamoSdkVersion=1.11.515
+springDynamoVersion=5.1.0
