--- a/build.gradle
+++ b/build.gradle
@@ -14,14 +14,20 @@ repositories {
 }
 
 dependencies {
+	implementation "org.projectlombok:lombok"
+
 	implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
+	implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
+
 	implementation "io.springfox:springfox-swagger2:${springfoxVersion}"
 	implementation "io.springfox:springfox-swagger-ui:${springfoxVersion}"
-	compileOnly "org.projectlombok:lombok"
+
+	implementation "com.amazonaws:aws-java-sdk-dynamodb:${dynamoSdkVersion}"
+	implementation "com.github.derjust:spring-data-dynamodb:${springDynamoVersion}"
 
 	testImplementation "org.springframework.boot:spring-boot-starter-test"
+	testImplementation "io.rest-assured:rest-assured:${restAssuredVersion}"
 	testImplementation "io.cucumber:cucumber-java:${cucumberVersion}"
 	testImplementation "io.cucumber:cucumber-spring:${cucumberVersion}"
 	testImplementation "io.cucumber:cucumber-junit:${cucumberVersion}"
-	testImplementation "io.rest-assured:rest-assured:${restAssuredVersion}"
 }
