--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,17 @@
-plugins {
-	id 'org.springframework.boot' version "2.1.3.RELEASE"
-	id 'java'
+buildscript {
+	ext {
+		springBootVersion = '2.1.3.RELEASE'
+	}
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+	}
 }
 
+apply plugin: 'java'
+apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.form3'
@@ -16,8 +25,7 @@ repositories {
 dependencies {
 	implementation "org.projectlombok:lombok"
 
-	implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
-	implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
+	implementation "org.springframework.boot:spring-boot-starter-web"
 
 	implementation "io.springfox:springfox-swagger2:${springfoxVersion}"
 	implementation "io.springfox:springfox-swagger-ui:${springfoxVersion}"
