--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 amazon.dynamodb.endpoint=http://localhost:8000/
 amazon.aws.accesskey=fakeaccesskey
 amazon.aws.secretkey=fakesecretkey
+server.port=5000
