--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ restAssuredVersion=3.3.0
 springfoxVersion=2.9.2
 dynamoSdkVersion=1.11.307
 springDynamoVersion=5.1.0
+gsonVersion=2.8.5
+jacksonMoneyVersion=1.1.1
