Iterate on Controller and DynamoDB integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-amazon.dynamodb.endpoint=http://localhost:8000/
-amazon.aws.accesskey=fakeaccesskey
-amazon.aws.secretkey=fakesecretkey
+amazon.aws.region=us-east-2
+amazon.aws.accesskey=fakekey
+amazon.aws.secretkey=fakekey
 server.port=5000
+# Allows marshalling of JSON fields like 'bank_id' into Java members like 'bankId'
 spring.jackson.property-naming-strategy=SNAKE_CASE
