Finish Cucumber integration tests

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-junitVersion=4.12
-cucumberVersion=4.2.3
-restAssuredVersion=3.3.0
 springfoxVersion=2.9.2
 dynamoSdkVersion=1.11.307
 springDynamoVersion=5.1.0
+junitVersion=4.12
+cucumberVersion=4.2.3
+restAssuredVersion=3.3.0
 gsonVersion=2.8.5
-jacksonMoneyVersion=1.1.1
+apacheIoVersion=1.3.2
