--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,7 @@ dependencies {
     implementation "io.springfox:springfox-swagger2:${springfoxVersion}"
     implementation "io.springfox:springfox-swagger-ui:${springfoxVersion}"
 
-    // Spring Data Repository suppor
-    // t for AWS DynamoDB
+    // Spring Data Repository support for AWS DynamoDB
     implementation "com.github.derjust:spring-data-dynamodb:${springDynamoVersion}"
     implementation "com.amazonaws:aws-java-sdk-dynamodb:${dynamoSdkVersion}"
 
@@ -46,6 +45,7 @@ dependencies {
     testImplementation "io.cucumber:cucumber-spring:${cucumberVersion}"
     testImplementation "io.cucumber:cucumber-junit:${cucumberVersion}"
     testImplementation "com.google.code.gson:gson:${gsonVersion}"
+    testImplementation "org.apache.commons:commons-io:${apacheIoVersion}"
 }
 
 jar {
